# vidkompy

./: .cursorrules  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  LLM.txt  PLAN.md  PROGRESS.md  README.md  SPEC.md  TODO.md  TODO_UPDATED.md  benchmark.py  benchmark.sh  cleanup.sh  llms.txt  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: alignment-algorithms.mdc  frame-matching-models.mdc  video-composition-rules.mdc  video-processing-flow.mdc
.giga/: specifications.json
.github/workflows/: push.yml  release.yml
.kudosflow/: credentials.json  template.txt
.specstory/history/: 2025-05-23_23-32-video-overlay-method-evaluation.md  2025-05-24_14-06-command-line-option-renaming-discussion.md  2025-05-24_14-20-fixing-todos-in-markdown-files.md  2025-05-24_14-20-optimize-vidrenmatch-py-with-numba.md  2025-05-24_14-20-untitled.md  2025-05-24_22-29-chat-name-generation.md  2025-05-24_23-32-untitled.md  2025-05-24_23-49-video-processing-misalignment-issue.md  2025-05-25_11-24-unexpected-keyword-argument-error.md  2025-05-25_13-31-implementing-todo-tasks.md  2025-05-25_16-58-review-todo-and-code.md  2025-05-25_16-58-untitled.md  2025-06-03_20-30-refactor-lazy-functions-in-main-py.md  2025-06-04_10-35-create-vidrenmatch-py-for-video-matching.md
src/vidkompo/: vidkompo.py
src/vidkompy/: __init__.py  __main__.py  __version__.py  align_old.py  models.py  thumbfind.py  vidkompy.py  vidkompy_old.py
src/vidkompy/align/: __init__.py  algorithms.py  cli.py  core.py  data_types.py  display.py  frame_extractor.py  precision.py  result_types.py
src/vidkompy/comp/: __init__.py  align.py  alignment_engine.py  data_types.py  domain_models.py  dtw_aligner.py  enums.py  fingerprint.py  frame_fingerprint.py  models.py  multi_resolution_aligner.py  multires.py  numba_optimizations.py  precise_temporal_alignment.py  precision.py  spatial_alignment.py  temporal.py  temporal_alignment.py  tunnel.py  tunnel_aligner.py  video.py  video_processor.py  vidkompy.py
src/vidkompy/core/: __init__.py  alignment_engine.py  dtw_aligner.py  frame_fingerprint.py  multi_resolution_aligner.py  numba_optimizations.py  precise_temporal_alignment.py  spatial_alignment.py  temporal_alignment.py  tunnel_aligner.py  video_processor.py
src/vidkompy/utils/: __init__.py  correlation.py  enums.py  image.py  logging.py  numba_ops.py
tests/: test_package.py
varia/: OLDSPEC.md  SPEC.md  SPEC1.md  SPEC2.md  SPEC3.md  SPEC4.md  SPEC5.md  align1.md  align2.md  align3.md  align4.md  comp.md  debug_frames.py  debug_multiple_frames.py  debug_template_match.py  numba.md  numba.py  thumbfind1.md  thumbfind2.md  thumbfind3.md  vidkompy.md
